[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/DS-DIGIB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Fonts/Kestoy Selfie.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 42.0
margin_bottom = 40.0
rect_scale = Vector2( 32.5965, 1.23403 )

[node name="Score" type="Label" parent="."]
visible = false
margin_left = 6.34669
margin_top = 1.58669
margin_right = 241.347
margin_bottom = 86.5867
custom_fonts/font = SubResource( 1 )
text = "
0"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_right = 185.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
text = "Bomber Wars"
align = 1
valign = 1

[node name="Button_Solitario" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -0.215942
margin_top = -58.4576
margin_right = -0.215942
margin_bottom = 29.5424
custom_fonts/font = SubResource( 3 )
text = "Solitario"

[node name="Button_Fiesta" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 43.9617
margin_bottom = 131.962
custom_fonts/font = SubResource( 3 )
text = "Modo Fiesta"

[node name="TimerMessage" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button_Solitario" to="." method="_on_Button_Solitario_pressed"]
[connection signal="pressed" from="Button_Fiesta" to="." method="_on_Button_Fiesta_pressed"]
[connection signal="timeout" from="TimerMessage" to="." method="_on_TimerMessage_timeout"]
